--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -5,7 +5,7 @@
     <title>Chicago Deep-Dish Pizza</title>
 </head>
 <body>
-    <img src="https://giordanos.com/content/uploads/Pizza_New-Homepage-image.jpg" alt="Chicago Deep-Dish Pizza">
+    <img style="height: 300px; width: 300px;" src="https://giordanos.com/content/uploads/Pizza_New-Homepage-image.jpg" alt="Chicago Deep-Dish Pizza">
     <h3>Description</h3>
     <p>This is a recipe of Chicago Deep-Dish Pizza</p>
     <h3>Ingraedients</h3>
@@ -39,7 +39,7 @@
         <li>Poke dough to deflate and turn out onto your work surface. Press and stretch out dough into a round shape 3 to 4 inches larger than a 12-inch cast iron skillet. 
             Brush skillet with 1 1/2 teaspoons olive oil. Place dough in the skillet; stretch and pull to evenly distribute it over the bottom and sides.</li>        
         <li>Lay provolone cheese over the bottom of the crust. Scatter fresh mozzarella on top. Add Italian sausage and firm mozzarella. Ladle pizza sauce generously on top. 
-            Grate Parmesan cheese on top. Fold the edges of the crust in towards the center to seal in the sides. Drizzle crust and center with 1 tablespoon olive oil.</li>        
+             Grate Parmesan cheese on top. Fold the edges of the crust in towards the center to seal in the sides. Drizzle crust and center with 1 tablespoon olive oil.</li>        
         <li>Bake in the center of the preheated oven until crust sounds hollow and pizza is beautifully browned, about 35 minutes. Let rest for 10 minutes before slicing. </li>
     </ol>
 </body>
