--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/recipes/pizza.html">Chicago Deep-Dish Pizza</a>
+    <ul>
+        <li><a href="recipes/pizza.html">Chicago Deep-Dish Pizza</a></li>
+        <li><a href="recipes/takoyaki.html">Takoyaki</a></li>
+        <li></li>
+    </ul>
     
 </body>
 </html>
