Add lasagna to index.html

--- a/recipes/takoyaki.html
+++ b/recipes/takoyaki.html
@@ -27,6 +27,7 @@
         <li>Katsuobushi dried bonito flakes</li>
         <li>*Substitute octopus with sausage cheese, ham, and etc.</li>
     </ul>
+    <h3>Steps</h3>
     <ol>
         <li>In a large bowl, mix well Dashi, eggs, soy sauce, salt, and flour with a whisk.</li>
         <li>Heat a Takoyaki pan with oil to very hot, just until the oil begins to smoke. Use enough oil to coat the pan using a paper towel so that the batter won’t stick. Then pour batter to fill the holes of the pan.</li>
