--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul>
         <li><a href="recipes/pizza.html">Chicago Deep-Dish Pizza</a></li>
         <li><a href="recipes/takoyaki.html">Takoyaki</a></li>
-        <li>Lasagna</li>
+        <li><a href="recipes/lasagna.html">Lasagna</a> </li>
     </ul>
     
 </body>
